Ensure the nav links do not wrap at all

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,7 @@ button:disabled svg {
   display: flex;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 975px) {
   #navDropdown {
     display: block;
   }
